# partial-date

./: AGENTS.md  Cargo.toml  EXAMPLES_SUMMARY.md  LICENSE  README.md  ai_disclosure.md  spec.md
examples/: QUICK_REFERENCE.md  README.md  all_examples.rs  console_entry_config.rs  country_based_config.rs  example_01_basic_dmy.rs  example_02_basic_mdy.rs  example_07_month_name_full.rs  example_09_month_name_fuzzy.rs  example_13_ordinal_day_st.rs
partial-date-tests/: Cargo.toml
partial-date-tests/src/: config.rs  day.rs  full_date.rs  levenshtein.rs  lib.rs  month.rs  month_name.rs  partial_date.rs  tokenise.rs  word_numbers.rs  year.rs
src/: extract.rs  interpreter.rs  levenshtein.rs  lib.rs  models.rs  tokeniser.rs  validator.rs  word_numbers.rs
